--- a/portfolio.html
+++ b/portfolio.html
@@ -20,13 +20,13 @@
         <nav class="header-nav">
           <ul class="header-list list">
             <li>
-              <a class="main" href="index.html">Studio</a>
+              <a class="navigation-header main" href="index.html">Studio</a>
             </li>
             <li>
-              <a class="main" href="">Portfolio</a>
+              <a class="navigation-header main" href="">Portfolio</a>
             </li>
             <li>
-              <a class="main" href="">Contacts</a>
+              <a class="navigation-header main" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -47,7 +47,7 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="buttons-portfolio">
         <div class="container">
           <!--Filtres-->
           <ul class="roster list">
