--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
         <nav class="header-nav">
           <ul class="header-list list">
             <li>
-              <a class="navig-header main" href="">Studio</a>
+              <a class="navigation-header main" href="">Studio</a>
             </li>
             <li>
-              <a class="navig-header main" href="portfolio.html">Portfolio</a>
+              <a class="navigation-header main" href="portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li>
-              <a class="navig-header main" href="">Contacts</a>
+              <a class="navigation-header main" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -47,8 +49,8 @@
       </div>
     </header>
     <main>
-      <section class="portfolio-cards hero">
-        <div class="hero-container container">
+      <section class="section-hero hero">
+        <div class="container">
           <h1 class="title">
             Effective Solutions<br />
             for Your Business
@@ -56,7 +58,7 @@
           <button class="button" type="button">Order Service</button>
         </div>
       </section>
-      <section>
+      <section class="section-text">
         <div class="container">
           <h2 hidden>features</h2>
           <ul class="advantages list">
@@ -91,7 +93,7 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="our-action">
         <div class="container">
           <h2 class="subtitle">What are we doing</h2>
           <ul class="picture list">
