--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </section>
       <section class="our-action">
         <div class="container">
-          <h2 class="subtitle">What are we doing</h2>
+          <h2 class="title-action subtitle">What are we doing</h2>
           <ul class="picture list">
             <li>
               <img src="./img/statistics.jpg" alt="mains creen" width="360" />
