--- a/portfolio.html
+++ b/portfolio.html
@@ -72,13 +72,16 @@
             <li class="cards-teams">
               <a class="links" href="">
                 <img
+                  class="img-portfolio"
                   src="img/row1(1).jpg"
                   alt="page dispaly"
                   width="360"
                   height="300"
                 />
                 <div class="second-card-content">
-                  <h3 class="minor">Banking App Interface Concept</h3>
+                  <h3 class="title-port minor">
+                    Banking App Interface Concept
+                  </h3>
                   <p class="indent">App</p>
                 </div>
               </a>
@@ -86,13 +89,14 @@
             <li class="cards-teams">
               <a class="links" href="">
                 <img
+                  class="img-portfolio"
                   src="img/row2(1).jpg"
                   alt="scaner phone"
                   width="360"
                   height="300"
                 />
                 <div class="second-card-content">
-                  <h3 class="minor">Cashless Payment</h3>
+                  <h3 class="title-port minor">Cashless Payment</h3>
                   <p class="indent">Marketing</p>
                 </div>
               </a>
@@ -100,13 +104,14 @@
             <li class="cards-teams">
               <a class="links" href="">
                 <img
+                  class="img-portfolio"
                   src="img/row3(1).jpg"
                   alt="mackboo and phone"
                   width="360"
                   height="300"
                 />
                 <div class="second-card-content">
-                  <h3 class="minor">Meditaion App</h3>
+                  <h3 class="title-port minor">Meditaion App</h3>
                   <p class="indent">App</p>
                 </div>
               </a>
@@ -114,9 +119,15 @@
             <!--Row-->
             <li>
               <a class="links" href="">
-                <img src="img/row1(2).jpg" alt="car" width="360" height="300" />
+                <img
+                  class="img-portfolio"
+                  src="img/row1(2).jpg"
+                  alt="car"
+                  width="360"
+                  height="300"
+                />
                 <div class="second-card-content">
-                  <h3 class="minor">Taxi Service</h3>
+                  <h3 class="title-port minor">Taxi Service</h3>
                   <p class="indent">Marketing</p>
                 </div>
               </a>
@@ -124,13 +135,14 @@
             <li>
               <a class="links" href="">
                 <img
+                  class="img-portfolio"
                   src="img/row2(2).jpg"
                   alt="display at phone"
                   width="360"
                   height="300"
                 />
                 <div class="second-card-content">
-                  <h3 class="minor">Screen Illustrations</h3>
+                  <h3 class="title-port minor">Screen Illustrations</h3>
                   <p class="indent">Design</p>
                 </div>
               </a>
@@ -138,13 +150,14 @@
             <li>
               <a class="links" href="">
                 <img
+                  class="img-portfolio"
                   src="img/row3(2).jpg"
                   alt="woman smile"
                   width="360"
                   height="300"
                 />
                 <div class="second-card-content">
-                  <h3 class="minor">Online Courses</h3>
+                  <h3 class="title-port minor">Online Courses</h3>
                   <p class="indent">Marketing</p>
                 </div>
               </a>
@@ -153,13 +166,14 @@
             <li>
               <a class="links" href="">
                 <img
+                  class="img-portfolio"
                   src="img/row1(3).jpg"
                   alt="instagram stories"
                   width="360"
                   height="300"
                 />
                 <div class="second-card-content">
-                  <h3 class="minor">Instagram Stories Concept</h3>
+                  <h3 class="title-port minor">Instagram Stories Concept</h3>
                   <p class="indent">Design</p>
                 </div>
               </a>
@@ -167,13 +181,14 @@
             <li>
               <a class="links" href="">
                 <img
+                  class="img-portfolio"
                   src="img/row2(3).jpg"
                   alt="fruit sack"
                   width="360"
                   height="300"
                 />
                 <div class="second-card-content">
-                  <h3 class="minor">Organic Food</h3>
+                  <h3 class="title-port minor">Organic Food</h3>
                   <p class="indent">Web Site</p>
                 </div>
               </a>
@@ -181,13 +196,14 @@
             <li>
               <a class="links" href="">
                 <img
+                  class="img-portfolio"
                   src="img/row3(3).jpg"
                   alt="mug with coffee"
                   width="360"
                   height="300"
                 />
                 <div class="second-card-content">
-                  <h3 class="minor">Fresh Coffee</h3>
+                  <h3 class="title-port minor">Fresh Coffee</h3>
                   <p class="indent">Web Site</p>
                 </div>
               </a>
