--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
             </li>
             <!--Row-->
 
-            <li>
+            <li class="cards-teams">
               <a class="links" href="">
                 <img
                   class="img-portfolio"
@@ -133,7 +133,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="cards-teams">
               <a class="links" href="">
                 <img
                   class="img-portfolio"
@@ -148,7 +148,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="cards-teams">
               <a class="links" href="">
                 <img
                   class="img-portfolio"
@@ -165,7 +165,7 @@
             </li>
 
             <!--Row-->
-            <li>
+            <li class="cards-teams">
               <a class="links" href="">
                 <img
                   class="img-portfolio"
@@ -180,7 +180,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="cards-teams">
               <a class="links" href="">
                 <img
                   class="img-portfolio"
@@ -195,7 +195,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="cards-teams">
               <a class="links" href="">
                 <img
                   class="img-portfolio"
